--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,3 +1,8 @@
 footer {
-  max-width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: auto;
+  background-color: black;
 }
